# fastpdf2png

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  publish.yml
bindings/node/: index.d.ts  index.js  package.json
bindings/python/: pyproject.toml
bindings/python/fastpdf2png/: __init__.py  converter.py  native.py
cmake/: DetectSIMD.cmake  FindPDFium.cmake  Sanitizers.cmake
fastpdf2png/: __init__.py  converter.py
include/fastpdf2png/: c_api.h  engine.h  export.h  fastpdf2png.h  pool.h  types.h
npm/: package.json
scripts/: build.bat  build.sh
src/: lib.cpp  lib.h  main.cpp  memory_pool.h  png_writer.cpp  png_writer.h
src/cli/: args.cpp  args.h  daemon_cmd.cpp  daemon_cmd.h  main.cpp  pool_cmd.cpp  pool_cmd.h  protocol.h  raw_cmd.cpp  raw_cmd.h  render_cmd.cpp  render_cmd.h
src/cli/platform/: worker_win.cpp
tests/: test_converter.py
